@@ -1,66 +1,101 @@
 <events>
 <!-- Start of IETF Standard MIB: BGP4-MIB -->
 <event>
- <mask>
-  <maskelement>
-   <mename>id</mename>
-   <mevalue>.1.3.6.1.2.1.15.7</mevalue>
-  </maskelement>
-  <maskelement>
-   <mename>generic</mename>
-   <mevalue>6</mevalue>
-  </maskelement>
-  <maskelement>
-   <mename>specific</mename>
-   <mevalue>1</mevalue>
-  </maskelement>
- </mask>
- <uei>uei.opennms.org/IETF/BGP/traps/bgpEstablished</uei>
- <event-label>BGP4-MIB defined trap event: bgpEstablished</event-label>
- <descr>&lt;p&gt;The BGP Established event is generated when
- the BGP FSM enters the ESTABLISHED state.&lt;/p&gt;&lt;table&gt;
- &lt;tr&gt;&lt;td&gt;&lt;b&gt;
- bgpPeerLastError&lt;/b&gt;&lt;/td&gt;&lt;td&gt;%parm[#1]%
- &lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;&lt;b&gt;
- bgpPeerState&lt;/b&gt;&lt;/td&gt;&lt;td&gt;%parm[#2]%
- &lt;/td&gt;&lt;td&gt;&lt;p;&gt;
- idle(1) connect(2) active(3) opensent(4) openconfirm(5) established(6)&lt;/p&gt;
- &lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
- </descr>
- <logmsg dest='logndisplay'>&lt;p&gt;BGP Event: FSM entered connected state.&lt;/p&gt;</logmsg>
- <severity>Normal</severity>
-</event>
+        <mask>
+                <maskelement>
+                        <mename>id</mename>
+                        <mevalue>.1.3.6.1.2.1.15</mevalue>
+                </maskelement>
+                <maskelement>
+                        <mename>generic</mename>
+                        <mevalue>6</mevalue>
+                </maskelement>
+                <maskelement>
+                        <mename>specific</mename>
+                        <mevalue>1</mevalue>
+                </maskelement>
+        </mask>
+        <uei>uei.opennms.org/mib2opennms/bgpEstablished</uei>
+        <event-label>BGP4-MIB defined trap event: bgpEstablished</event-label>
+        <descr>
+&lt;p&gt;The BGP Established event is generated when
+the BGP FSM enters the ESTABLISHED state.&lt;/p&gt;&lt;table&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
 
+        bgpPeerRemoteAddr&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#1]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        bgpPeerLastError&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#2]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        bgpPeerState&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#3]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+                idle(1)
+                connect(2)
+                active(3)
+                opensent(4)
+                openconfirm(5)
+                established(6)
+        &lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
+        </descr>
+                <logmsg dest='logndisplay'>&lt;p&gt;
+                        bgpEstablished trap received 
+                        bgpPeerRemoteAddr=%parm[#1]% 
+                        bgpPeerLastError=%parm[#2]% 
+                        bgpPeerState=%parm[#3]%&lt;/p&gt;
+                </logmsg>
+        <severity>Normal</severity>
+</event>
 <event>
- <mask>
-  <maskelement>
-   <mename>id</mename>
-   <mevalue>.1.3.6.1.2.1.15.7</mevalue>
-  </maskelement>
-  <maskelement>
-   <mename>generic</mename>
-   <mevalue>6</mevalue>
-  </maskelement>
-  <maskelement>
-   <mename>specific</mename>
-   <mevalue>2</mevalue>
-  </maskelement>
- </mask>
- <uei>uei.opennms.org/IETF/BGP/traps/bgpBackwardTransition</uei>
- <event-label>BGP4-MIB defined trap event: bgpBackwardTransition</event-label>
- <descr>&lt;p&gt;The BGPBackwardTransition Event is generated
- when the BGP FSM moves from a higher numbered
- state to a lower numbered state.&lt;/p&gt;&lt;table&gt;
- &lt;tr&gt;&lt;td&gt;&lt;b&gt;
- bgpPeerLastError&lt;/b&gt;&lt;/td&gt;&lt;td&gt;%parm[#1]%
- &lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;&lt;b&gt;
- bgpPeerState&lt;/b&gt;&lt;/td&gt;&lt;td&gt;%parm[#2]%
- &lt;/td&gt;&lt;td&gt;&lt;p;&gt;
- idle(1) connect(2) active(3) opensent(4) openconfirm(5) established(6)&lt;/p&gt;
- &lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
- </descr>
- <logmsg dest='logndisplay'>&lt;p&gt;BGP Event: FSM Backward Transistion.&lt;/p&gt;</logmsg>
- <severity>Warning</severity>
+        <mask>
+                <maskelement>
+                        <mename>id</mename>
+                        <mevalue>.1.3.6.1.2.1.15</mevalue>
+                </maskelement>
+                <maskelement>
+                        <mename>generic</mename>
+                        <mevalue>6</mevalue>
+                </maskelement>
+                <maskelement>
+                        <mename>specific</mename>
+                        <mevalue>2</mevalue>
+                </maskelement>
+        </mask>
+        <uei>uei.opennms.org/mib2opennms/bgpBackwardTransition</uei>
+        <event-label>BGP4-MIB defined trap event: bgpBackwardTransition</event-label>
+        <descr>
+&lt;p&gt;The BGPBackwardTransition Event is generated
+when the BGP FSM moves from a higher numbered
+state to a lower numbered state.&lt;/p&gt;&lt;table&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        bgpPeerRemoteAddr&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#1]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        bgpPeerLastError&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#2]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        bgpPeerState&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#3]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+                idle(1)
+                connect(2)
+                active(3)
+                opensent(4)
+                openconfirm(5)
+                established(6)
+        &lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
+        </descr>
+                <logmsg dest='logndisplay'>&lt;p&gt;
+                        bgpBackwardTransition trap received 
+                        bgpPeerRemoteAddr=%parm[#1]% 
+                        bgpPeerLastError=%parm[#2]% 
+                        bgpPeerState=%parm[#3]%&lt;/p&gt;
+                </logmsg>
+        <severity>Warning</severity>
 </event>
 <!-- End of IETF Standard MIB: BGP4-MIB -->
 <!-- Start of IETF Standard MIB: BRIDGE-MIB -->
